Proyecto1/GRAMATICA ARCHIVOS.txt
TOKENS:

TK_ASTERISCO // simbolo *
TK_NUM    //numeros 10 1 8 21 9 55...
TK_DIR    // cadenas y direcciones sin cadenas /home/
TK_EXEC   // palabra reservada exec
TK_PATH   // palabra reservada -path
TK_PAUSE  // palabra reservada pause
TK_MKDISK // palabra reservada mkdisk
TK_SIZE   // palabra reservada -size
TK_NAME   // palabra reservada -name
TK_UNIT   // palabra reservada -unit
TK_RMDISK // palabra reservada rmdisk
TK_FDISK  // palabra reservada fdisk
TK_TYPE   // palabra reservada -type
TK_FIT    // palabra reservada -fit
TK_DEL    // palabra reservada -delete 
TK_ADD    // palabra reservada -add
TK_MNT    // palabra reservada mount
TK_UMNT   // palabra reservada unmount
TK_TIPOREPORTE //palabras reservadas "mbr", "disk", "sb", "bm_arbdir", "bm_detdir", "bm_inode", "bm_block", "bitacora", "directorio", "tree_file", "tree_directorio", "tree_complete", "ls"
TK_PID    // palabra reservada -id
TK_REP	// palabra reservada rep
TK_NOMBRE // palabra reservada -nombre
TK_ASIG   // flecha de asignacion "->"
TK_ID     //identificadores de particiones, nombres de archivo
TK_CMT    // comentario de una linea
TK_SIGUE	  // continuan parametros "\*"
TK_BYTES  // palabra reservada b, m o k
TK_PEL   // palabras reservadas p, e o l
TK_BFW   // palabras reservadas bf, ff, wf
TK_FF    // palabras reservadas "fast" y "full"
TK_FILE  // direccion de un archivo existente

////////////////// FASE 2 //////////////////

TK_MKFS // palabra reservada para mkfs
TK_LOGIN // palabra reservada para login
TK_LOGOUT // palabra reservada para logout
TK_MKGRP // palabra reservada para mkgrp 
TK_RMGRP // palabra reservada para rmgrp 
TK_MKUSR // palabra reservada para mkusr
TK_RMUSR // palabra reservada para rmusr
TK_CHMOD // palabra reservada para chmod
TK_MKFILE // palabra reservada para mkfile
TK_CAT // palabra reservada para cat
TK_RM // palabra reservada para rm
TK_EDIT // palabra reservada para edit
TK_REN // palabra reservada para ren
TK_MKDIR // palabra reservada para mkdir
TK_CP // palabra reservada para cp
TK_MV // palabra reservada para mv
TK_FIND // palabra reservada para find
TK_CHOWN // palabra reservada para chown

TK_CHGRP // palabra reservada para chgrp
TK_LOSS // palabra reservada para loss 
TK_RECOVERY // palabra reservada para recovery

TK_RUTA // palabra reservada para -ruta
TK_USR // palabra reservada para -usr
TK_PWD // palabra reservada para -pwd
TK_GRP // palabra reservada para -grp
TK_UGO // palabra reservada para -ugo
TK_R // palabra reservada para -R
TK_P // palabra reservada para -P
TK_CONT // palabra reservada para -cont
TK_PFILE // palabra reservada para -file
TK_RF // palabra reservada para -rf
TK_DEST // palabra reservada para -dest
TK_IDDEST // palabra reservada para -iddestiny

<INICIO>::=  <INSTRUCCION> <OTRA_INSTRUCCION>
	   | TK_COMENTARIO <OTRA_INSTRUCCION>
	   | TK_PAUSE 	   <OTRA_INSTRUCCION>
	   | TK_LOGOUT <OTRA_INSTRUCCION>

<OTRA_INSTRUCCION>::= <INICIO>
		      | E

<INSTRUCCION>::= TK_EXEC TK_PATH TK_ASIG TK_FILE 
		|TK_LOSS TK_PID TK_ASIG TK_ID
		|TK_RECOVERY TK_PID TK_ASIG TK_ID
		|TK_RMDISK TK_PATH TK_ASIG TK_FILE
		|TK_MKDISK <PARAM_MKDISK> <OTRO_PARAM_MKDISK>
		|TK_FDISK <PARAM_FDISK> <OTRO_PARAM_FDISK>
		|TK_MNT <PARAM_MOUNT> <OTRO_PARAM_MOUNT>
		|TK_UMNT TK_PID TK_NUM TK_ASIG TK_ID <OTRO_ID>
		|TK_REP <PARAM_REP> <OTRO_PARAM_REP>
		|TK_MKFS <PARAM_MKFS> <OTRO_PARAM_MKFS>
		|TK_LOGIN <PARAM_LOGIN> <OTRO_PARAM_LOGIN>
		|TK_MKGRP <PARAM_MKGRP> <OTRO_PARAM_MKGRP>
		|TK_RMGRP <PARAM_RMGRP> <OTRO_PARAM_RMGRP>
		|TK_MKUSR <PARAM_MKUSR> <OTRO_PARAM_MKUSR>
		|TK_RMUSR <PARAM_RMUSR> <OTRO_PARAM_RMUSR>
		|TK_CHMOD <PARAM_CHMOD> <OTRO_PARAM_CHMOD>
		|TK_MKFILE <PARAM_MKFILE> <OTRO_PARAM_MKFILE>
		|TK_CAT <PARAM_CAT> <OTRO_PARAM_CAT>
		|TK_RM <PARAM_RM> <OTRO_PARAM_RM>
		|TK_EDIT <PARAM_EDIT> <OTRO_PARAM_EDIT>
		|TK_REN <PARAM_REN> <OTRO_PARAM_REN>
		|TK_MKDIR <PARAM_MKDIR> <OTRO_PARAM_MKDIR>
		|TK_CP <PARAM_CP> <OTRO_PARAM_CP>
		|TK_MV <PARAM_MV> <OTRO_PARAM_MV>
		|TK_FIND <PARAM_FIND> <OTRO_PARAM_FIND>
		|TK_CHOWN <PARAM_CHOWN> <OTRO_PARAM_CHOWN>
		|TK_CHGRP <PARAM_CHGRP> <OTRO_PARAM_CHGRP>

<PARAM_CHGRP>::= TK_USR TK_ASIG TK_ID <OTRO_PARAM_CHGRP>
				|TK_GRP TK_ASIG TK_ID <OTRO_PARAM_CHGRP>


<OTRO_PARAM_CHGRP>::= <PARAM_CHGRP> <OTRO_PARAM_CHGRP>
					| E

<PARAM_MKDISK>::= TK_SIZE TK_ASIG TK_NUM <OTRO_PARAM_MKDISK>
		| TK_PATH TK_ASIG TK_DIR <OTRO_PARAM_MKDISK>
		| TK_NAME TK_ASIG TK_ID  <OTRO_PARAM_MKDISK>
		| TK_UNIT TK_ASIG TK_BYTES <OTRO_PARAM_MKDISK>
		
<OTRO_PARAM_MKDISK>::= <PARAM_MKDISK> <OTRO_PARAM_MKDISK>
		     | E


<PARAM_FDISK>::= TK_SIZE TK_ASIG TK_NUM <OTRO_PARAM_FDISK>
		|TK_UNIT TK_ASIG TK_BYTES <OTRO_PARAM_FDISK>
		|TK_PATH TK_ASIG TK_FILE <OTRO_PARAM_FDISK>
		|TK_TYPE TK_ASIG TK_PEL <OTRO_PARAM_FDISK>
		|TK_FIT  TK_ASIG TK_BFW <OTRO_PARAM_FDISK>
		|TK_DEL  TK_ASIG TK_FF  <OTRO_PARAM_FDISK>
		|TK_NAME TK_ASIG TK_ID  <OTRO_PARAM_FDISK>
		|TK_ADD  TK_ASIG TK_NUM <OTRO_PARAM_FDISK>

<OTRO_PARAM_FDISK>::= <PARAM_FDISK> <OTRO_PARAM_FDISK>
		| E

<PARAM_MOUNT>::= TK_PATH TK_ASIG TK_FILE <OTRO_PARAM_MOUNT>
		|TK_NAME TK_ASIG TK_ID  <OTRO_PARAM_MOUNT>
		|E
		
<OTRO_PARAM_MOUNT>::= <PARAM_MOUNT> <OTRO_PARAM_MOUNT>
		    | E

<OTRO_ID>::= TK_PID TK_NUM TK_ASIG TK_ID <OTRO_ID>
	   | E

<PARAM_REP> :: = TK_NOMBRE TK_ASIG TK_TIPOREPORTE <OTRO_PARAM_REP>
				|TK_PATH TK_ASIG TK_FILE <OTRO_PARAM_REP>
				|TK_PID TK_ASIG TK_ID <OTRO_PARAM_REP>
				|TK_RUTA TK_ASIG (TK_FILE| TK_DIR) <OTRO_PARAM_REP>

<OTRO_PARAM_REP> ::= <PARAM_REP> <OTRO_PARAM_REP>
					| E

<PARAM_MKFS> ::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_MKFS>
				|TK_TYPE TK_ASIG TK_FF <OTRO_PARAM_MKFS>
				|TK_ADD TK_ASIG TK_NUM <OTRO_PARAM_MKFS>
				|TK_UNIT TK_ASIG TK_BYTES <OTRO_PARAM_MKFS> 

<OTRO_PARAM_MKFS> ::= <PARAM_MKFS> <OTRO_PARAM_MKFS>
					| E

<PARAM_LOGIN>::= TK_USR TK_ASIG TK_ID <OTRO_PARAM_LOGIN>
				| TK_PWD TK_ASIG (TK_NUM | TK_ID) <OTRO_PARAM_LOGIN>
				| TK_PID TK_ASIG TK_ID <OTRO_PARAM_LOGIN>

<OTRO_PARAM_LOGIN>::= <PARAM_LOGIN> <OTRO_PARAM_LOGIN
					| E

<PARAM_MKGRP>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_MKGRP>
			|TK_NAME TK_ASIG TK_ID <OTRO_PARAM_MKGRP>


<OTRO_PARAM_MKGRP>::= <PARAM_MKGRP> <OTRO_PARAM_MKGRP>
				| E

<PARAM_RMGRP>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_RMGRP>
			|TK_NAME TK_ASIG TK_ID <OTRO_PARAM_RMGRP>


<OTRO_PARAM_RMGRP>::= <PARAM_MKGRP> <OTRO_PARAM_RMGRP>
				| E

<PARAM_MKUSR>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_MKUSR>
				|TK_USR TK_ASIG TK_ID <OTRO_PARAM_MKUSR>
				|TK_PWD TK_ASIG (TK_NUM | TK_ID) <OTRO_PARAM_MKUSR>
				|TK_GRP TK_ASIG TK_ID <OTRO_PARAM_MKUSR>

<OTRO_PARAM_MKUSR>::= <PARAM_MKUSR> <OTRO_PARAM_MKUSR>
					|E

<PARAM_RMUSR>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_RMUSR>
				|TK_USR TK_ASIG TK_ID <OTRO_PARAM_RMUSR>

<OTRO_PARAM_RMUSR>::= <PARAM_RMUSR> <OTRO_PARAM_RMUSR>
					|E

<PARAM_CHMOD>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_CHMOD>
				|TK_PATH TK_ASIG (TK_FILE| TK_DIR) <OTRO_PARAM_CHMOD>
				|TK_UGO TK_ASIG TK_NUM <OTRO_PARAM_CHMOD>
				|TK_R <OTRO_PARAM_CHMOD>

<OTRO_PARAM_CHMOD>::= <PARAM_CHMOD> <OTRO_PARAM_CHMOD>
					|E

<PARAM_MKFILE>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_MKFILE>
				| TK_PATH TK_ASIG TK_FILE <OTRO_PARAM_MKFILE>
				| TK_SIZE TK_ASIG TK_NUM <OTRO_PARAM_MKFILE>
				| TK_CONT TK_ASIG TK_FILE <OTRO_PARAM_MKFILE>
				| TK_P <OTRO_PARAM_MKFILE>

<OTRO_PARAM_MKFILE>::= <PARAM_MKFILE> <OTRO_PARAM_MKFILE>
					| E

<PARAM_CAT>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_CAT>
			|  TK_PFILE TK_NUM TK_ASIG TK_FILE <OTRO_FILE> <OTRO_PARAM_CAT>

<OTRO_FILE>::= TK_PFILE TK_NUM TK_ASIG TK_FILE <OTRO_FILE>
	   | E

<OTRO_PARAM_CAT>::= <PARAM_CAT> <OTRO_PARAM_CAT>
					|E

<PARAM_RM>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_RM>
			| TK_PATH TK_ASIG (TK_FILE| TK_DIR) <OTRO_PARAM_RM>
			| TK_RF <OTRO_PARAM_RM>

<OTRO_PARAM_RM>::= <PARAM_RM> <OTRO_PARAM_RM>
				| E

<PARAM_EDIT>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_EDIT>
				| TK_PATH TK_ASIG TK_FILE <OTRO_PARAM_EDIT>
				| TK_SIZE TK_ASIG TK_NUM <OTRO_PARAM_EDIT>
				| TK_CONT TK_ASIG TK_FILE <OTRO_PARAM_EDIT>

<OTRO_PARAM_EDIT>::= <PARAM_EDIT> <OTRO_PARAM_EDIT>
					| E

<PARAM_REN>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_REN>
				| TK_PATH TK_ASIG (TK_FILE | TK_DIR) <OTRO_PARAM_REN>
				| TK_NAME TK_ASIG (TK_FILE | TK_ID)  <OTRO_PARAM_REN>


<OTRO_PARAM_REN>::= <PARAM_REN> <OTRO_PARAM_REN>
					| E

<PARAM_MKDIR>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_MKDIR>
				| TK_PATH TK_ASIG TK_DIR <OTRO_PARAM_MKDIR>
				| TK_P <OTRO_PARAM_MKDIR>

<OTRO_PARAM_MKDIR>::= <PARAM_MKDIR> <OTRO_PARAM_MKDIR>
					| E

<PARAM_CP>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_CP>
			| TK_PATH TK_ASIG (TK_FILE| TK_DIR) <OTRO_PARAM_CP>
			| TK_DEST TK_ASIG TK_DIR <OTRO_PARAM_CP>

<OTRO_PARAM_CP>:: <PARAM_CP> <OTRO_PARAM_CP>
				| E

<PARAM_MV>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_MV>
			| TK_PATH TK_ASIG (TK_FILE| TK_DIR) <OTRO_PARAM_MV>
			| TK_DEST TK_ASIG TK_DIR <OTRO_PARAM_MV>
			| TK_IDDEST TK_ASIG TK_ID <OTRO_PARAM_MV>


<OTRO_PARAM_MV>:: <PARAM_MV> <OTRO_PARAM_MV>
				| E

<PARAM_FIND>::= TK_NOMBRE TK_ASIG (TK_ASTERISCO|TK_DIR |TK_ID) <OTRO_PARAM_FIND>
				|TK_PATH TK_ASIG TK_DIR <OTRO_PARAM_FIND>
				|TK_PID TK_ASIG TK_ID <OTRO_PARAM_FIND>

<OTRO_PARAM_FIND>::= <PARAM_FIND> <OTRO_PARAM_FIND>
				| E

<PARAM_CHOWN>::= TK_PID TK_ASIG TK_ID <OTRO_PARAM_CHOWN>
				|TK_PATH TK_ASIG (TK_FILE | TK_DIR) <OTRO_PARAM_CHOWN>
				|TK_USR TK_ASIG TK_ID <OTRO_PARAM_CHOWN>
				|TK_R <OTRO_PARAM_CHOWN>

<OTRO_PARAM_CHOWN>::= <PARAM_CHOWN> <OTRO_PARAM_CHOWN>
					| E
