Proyecto1/analizadores/sintactico.go
package analizadores

import (
	"Proyecto1/estructuras"
	"Proyecto1/funciones"

	"github.com/doun/terminal/color"
)

var (
	syntaxError                                                                          bool = false
	token                                                                                int  = -1
	tokenAux                                                                             *estructuras.Token
	vSize, vPath, vName, vUnit, vType, vFit, vDelete, vAdd, vID, vNombre, vRuta, vFormat string = "", "", "", "", "", "", "", "", "", "", "", ""
	vUser, vPass, vGroup, vUgo, vR, vCont, vP, vRf, vDestino, vIDDestiny                 string = "", "", "", "", "", "", "", "", "", ""
	ejMkdisk, ejFdisk, ejRmdisk, ejMount, ejUnmount, ejReporte, ejMkfs                   bool   = false, false, false, false, false, false, false
	ejLogin, ejMkgrp, ejRmgrp, ejMkusr, ejRmusr, ejChmod, ejMkfile                       bool   = false, false, false, false, false, false, false
	ejCat, ejRm, ejEdit, ejRen, ejMkdir, ejCp, ejMv                                      bool   = false, false, false, false, false, false, false
	ejFind, ejChown, ejChgrp                                                             bool   = false, false, false
	//ListaIDs para desmontar IDs
	ListaIDs []string
	//ListaFiles para la function CAT
	ListaFiles []string
)

func resetearBanderas() {
	ejFdisk = false
	ejMkdisk = false
	ejRmdisk = false
	ejMount = false
	ejUnmount = false
	ejReporte = false
	ejMkfs = false
	ejLogin = false
	ejMkgrp = false
	ejRmgrp = false
	ejMkusr = false
	ejRmusr = false
	ejChmod = false
	ejMkfile = false
	ejCat = false
	ejRm = false
	ejEdit = false
	ejRen = false
	ejMkdir = false
	ejCp = false
	ejMv = false
	ejFind = false
	ejChown = false
	ejChgrp = false
}

func resetearValores() {
	vSize = ""
	vPath = ""
	vName = ""
	vUnit = ""
	vType = ""
	vFit = ""
	vDelete = ""
	vAdd = ""
	vID = ""
	vNombre = ""
	vRuta = ""
	vFormat = ""
	vUser = ""
	vPass = ""
	vGroup = ""
	vUgo = ""
	vR = ""
	vCont = ""
	vP = ""
	vRf = ""
	vDestino = ""
	vIDDestiny = ""
}

//Sintactico fuction
func Sintactico() {
	syntaxError = false
	tokenAux = nextToken()
	token = -1

	if token < (len(tokens) - 1) {
		tokenAux = nextToken()
		inicio()
	}

	if !syntaxError && token >= (len(tokens)-1) {
		//color.Println("@{!c}	Analisis sintáctico exitoso")
	} else {
		color.Println("@{!r}	Error sintáctico encontrado")
	}

}

func inicio() {

	if tokenAux.GetTipo() == "TK_CMT" {
		color.Printf("@{!m}%v\n\n", tokenAux.GetLexema())
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_PAUSE" {
		Pausa()
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_LOGOUT" {
		funciones.EjecutarLogout()
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_EXEC" {

		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_PATH") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_ASIG") {
				tokenAux = nextToken()
				if tokenCorrecto(tokenAux, "TK_FILE") {
					//LEER ARCHIVO
					color.Println("@{!r}No se puede ejecutar un script llamado desde otro script.")
					otraInstruccion()
				} else {
					syntaxError = true
				}
			} else {
				syntaxError = true
			}
		} else {
			syntaxError = true
		}

	} else if tokenAux.GetTipo() == "TK_LOSS" {

		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_PID") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_ASIG") {
				tokenAux = nextToken()
				if tokenCorrecto(tokenAux, "TK_ID") {
					//SETEAR ID
					vID = tokenAux.GetLexema()
					funciones.EjecutarLoss(vID)
					resetearBanderas()
					resetearValores()
					otraInstruccion()
				} else {
					syntaxError = true
				}
			} else {
				syntaxError = true
			}
		} else {
			syntaxError = true
		}

	} else if tokenAux.GetTipo() == "TK_RECOVERY" {

		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_PID") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_ASIG") {
				tokenAux = nextToken()
				if tokenCorrecto(tokenAux, "TK_ID") {
					//SETEAR ID
					vID = tokenAux.GetLexema()
					funciones.EjecutarRecovery(vID)
					resetearBanderas()
					resetearValores()
					otraInstruccion()
				} else {
					syntaxError = true
				}
			} else {
				syntaxError = true
			}
		} else {
			syntaxError = true
		}

	} else if tokenAux.GetTipo() == "TK_RMDISK" {

		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_PATH") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_ASIG") {
				tokenAux = nextToken()
				if tokenCorrecto(tokenAux, "TK_FILE") {
					//BORRAR DISCO
					vPath = tokenAux.GetLexema()
					funciones.EjecutarRmDisk(vPath)
					resetearBanderas()
					resetearValores()
					otraInstruccion()
				} else {
					syntaxError = true
				}
			} else {
				syntaxError = true
			}
		} else {
			syntaxError = true
		}

	} else if tokenAux.GetTipo() == "TK_MKDISK" {
		ejMkdisk = true
		paramMkDisk()
		if ejMkdisk {
			funciones.EjecutarMkDisk(vSize, vPath, vName, vUnit)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_FDISK" {
		ejFdisk = true
		paramFDisk()
		if ejFdisk {
			funciones.EjecutarFDisk(vSize, vUnit, vPath, vType, vFit, vDelete, vName, vAdd)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_MNT" {
		ejMount = true
		paramMount()
		if ejMount {
			funciones.EjecutarMount(vPath, vName)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_REP" {
		ejReporte = true
		paramRep()
		if ejReporte {
			funciones.EjecutarReporte(vNombre, vPath, vRuta, vID)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_LOGIN" {
		ejLogin = true
		paramLogin()
		if ejLogin {
			funciones.EjecutarLogin(vUser, vPass, vID)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_MKFS" {
		ejMkfs = true
		paramMkfs()
		if ejMkfs {
			funciones.EjecutarMkfs(vID, vFormat, vAdd, vUnit)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_MKGRP" {
		ejMkgrp = true
		paramMkgrp()
		if ejMkgrp {
			funciones.EjecutarMkgrp(vGroup, vID)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_RMGRP" {
		ejRmgrp = true
		paramRmgrp()
		if ejRmgrp {
			funciones.EjecutarRmgrp(vGroup, vID)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_MKUSR" {
		ejMkusr = true
		paramMkusr()
		if ejMkusr {
			funciones.EjecutarMkusr(vUser, vPass, vGroup, vID)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_RMUSR" {
		ejRmusr = true
		paramRmusr()
		if ejRmusr {
			funciones.EjecutarRmusr(vUser, vID)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_CHMOD" {
		ejChmod = true
		paramChmod()
		if ejChmod {
			funciones.EjecutarChmod(vID, vPath, vUgo, vR)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_MKFILE" {
		ejMkfile = true
		paramMkfile()
		if ejMkfile {
			funciones.EjecutarMkfile(vID, vPath, vSize, vCont, vP)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_CAT" {
		ListaFiles = nil
		ejCat = true
		paramCat()
		if ejCat {
			funciones.EjecutarCat(vID, &ListaFiles)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_RM" {
		ejRm = true
		paramRm()
		if ejRm {
			funciones.EjecutarRm(vID, vPath, vRf)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_EDIT" {
		ejEdit = true
		paramEdit()
		if ejEdit {
			funciones.EjecutarEdit(vID, vPath, vSize, vCont)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_REN" {
		ejRen = true
		paramRen()
		if ejRen {
			funciones.EjecutarRen(vID, vPath, vName)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_MKDIR" {
		ejMkdir = true
		paramMkdir()
		if ejMkdir {
			funciones.EjecutarMkdir(vID, vPath, vP)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_CP" {
		ejCp = true
		paramCp()
		if ejCp {
			funciones.EjecutarCp(vID, vPath, vDestino)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_MV" {
		ejMv = true
		paramMv()
		if ejMv {
			funciones.EjecutarMv(vID, vIDDestiny, vPath, vDestino)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_FIND" {
		ejFind = true
		paramFind()
		if ejFind {
			funciones.EjecutarFind(vID, vPath, vNombre)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_CHOWN" {
		ejChown = true
		paramChown()
		if ejChown {
			funciones.EjecutarChown(vID, vPath, vUser, vR)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_CHGRP" {
		ejChgrp = true
		paramChgrp()
		if ejChgrp {
			funciones.EjecutarChgrp(vUser, vGroup)
			resetearBanderas()
			resetearValores()
		}
		otraInstruccion()
	} else if tokenAux.GetTipo() == "TK_UMNT" {
		ListaIDs = nil
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_PID") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_NUM") {
				tokenAux = nextToken()
				if tokenCorrecto(tokenAux, "TK_ASIG") {
					tokenAux = nextToken()
					if tokenCorrecto(tokenAux, "TK_ID") {
						ejUnmount = true
						//Guardar ID
						ListaIDs = append(ListaIDs, tokenAux.GetLexema())
						otroID()
						if ejUnmount {
							funciones.EjecutarUnmount(&ListaIDs)
							resetearBanderas()
							resetearValores()
						}
						otraInstruccion()
					} else {
						syntaxError = true
					}
				} else {
					syntaxError = true
				}
			} else {
				syntaxError = true
			}
		} else {
			syntaxError = true
		}

	} else {
		syntaxError = true
		//color.Println("@{!r}Se esperaba fdisk, mkdisk, mount, etc.")
	}

}

func paramMkDisk() {
	tokenAux = nextToken()
	if tokenCorrecto(tokenAux, "TK_SIZE") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_NUM") {
				//SETEAR SIZE
				vSize = tokenAux.GetLexema()
				otroParamMkDisk()

			} else {
				ejMkdisk = false
				syntaxError = true
			}
		} else {
			ejMkdisk = false
			syntaxError = true
		}
	} else if tokenCorrecto(tokenAux, "TK_PATH") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_DIR") {
				//SETEAR PATH
				vPath = tokenAux.GetLexema()
				otroParamMkDisk()
			} else {
				ejMkdisk = false
				syntaxError = true
			}
		} else {
			ejMkdisk = false
			syntaxError = true
		}
	} else if tokenCorrecto(tokenAux, "TK_NAME") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_ID") {
				//SETEAR NAME
				vName = tokenAux.GetLexema()
				otroParamMkDisk()
			} else {
				ejMkdisk = false
				syntaxError = true
			}
		} else {
			ejMkdisk = false
			syntaxError = true
		}
	} else if tokenCorrecto(tokenAux, "TK_UNIT") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_BYTES") {
				//SETEAR BYTES
				vUnit = tokenAux.GetLexema()
				otroParamMkDisk()
			} else {
				ejMkdisk = false
				syntaxError = true
			}
		} else {
			ejMkdisk = false
			syntaxError = true
		}
	} else {
		ejMkdisk = false
		syntaxError = true
		color.Println("@{!r}Se esperaba -size, -path, -name, etc.")
	}
}

func otroParamMkDisk() {
	if token < (len(tokens) - 1) {
		if tokens[token+1].GetTipo() == "TK_SIZE" || tokens[token+1].GetTipo() == "TK_PATH" || tokens[token+1].GetTipo() == "TK_NAME" || tokens[token+1].GetTipo() == "TK_UNIT" {
			paramMkDisk()
		}
	}
}

func paramFDisk() {
	tokenAux = nextToken()
	if tokenCorrecto(tokenAux, "TK_SIZE") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_NUM") {
				//SETEAR SIZE
				vSize = tokenAux.GetLexema()
				otroParamFDisk()
			} else {
				ejFdisk = false
				syntaxError = true
			}
		} else {
			ejFdisk = false
			syntaxError = true
		}
	} else if tokenCorrecto(tokenAux, "TK_UNIT") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_BYTES") {
				//SETEAR BYTES
				vUnit = tokenAux.GetLexema()
				otroParamFDisk()
			} else {
				ejFdisk = false
				syntaxError = true
			}
		} else {
			ejFdisk = false
			syntaxError = true
		}
	} else if tokenCorrecto(tokenAux, "TK_PATH") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_FILE") {
				//SETEAR PATH
				vPath = tokenAux.GetLexema()
				otroParamFDisk()
			} else {
				ejFdisk = false
				syntaxError = true
			}
		} else {
			ejFdisk = false
			syntaxError = true
		}
	} else if tokenCorrecto(tokenAux, "TK_TYPE") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_PEL") {
				//SETEAR TYPE
				vType = tokenAux.GetLexema()
				otroParamFDisk()
			} else {
				ejFdisk = false
				syntaxError = true
			}
		} else {
			ejFdisk = false
			syntaxError = true
		}
	} else if tokenCorrecto(tokenAux, "TK_FIT") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_BFW") {
				//SETEAR FIT
				vFit = tokenAux.GetLexema()
				otroParamFDisk()
			} else {
				ejFdisk = false
				syntaxError = true
			}
		} else {
			ejFdisk = false
			syntaxError = true
		}
	} else if tokenCorrecto(tokenAux, "TK_DEL") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_FF") {
				//SETEAR DELETE MODE
				vDelete = tokenAux.GetLexema()
				otroParamFDisk()
			} else {
				ejFdisk = false
				syntaxError = true
			}
		} else {
			ejFdisk = false
			syntaxError = true
		}
	} else if tokenCorrecto(tokenAux, "TK_NAME") {
		tokenAux = nextToken()
		if tokenCorrecto(tokenAux, "TK_ASIG") {
			tokenAux = nextToken()
			if tokenCorrecto(tokenAux, "TK_ID") {
				//SETEAR NAME
				vName = tokenAux.GetLexema()
				otroParamFDisk()
			} else {
				ejFdisk = false
				syntaxError = true
			}
		} else {
